# tuw_geometry

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  LICENSE  README.md  nodes.md  package.xml
cfg/: Linesegment2DDetector.cfg
docker/: Dockerfile  Makefile  ros_entrypoint.sh
include/tuw_geometry/: command.h  command.hpp  command2d.hpp  figure.h  figure.hpp  geo_map.hpp  grid_map.h  grid_map.hpp  layered_figure.h  layered_figure.hpp  layered_maps.h  layered_maps.hpp  line2d.h  line2d.hpp  line3d.hpp  linesegment2d.h  linesegment2d.hpp  linesegment2d_detector.h  linesegment2d_detector.hpp  linesegment2d_detector_node.h  measurement.h  measurement_marker.h  measurement_object.h  plane3d.hpp  point2d.h  point2d.hpp  polar2d.h  polar2d.hpp  pose2d.h  pose2d.hpp  sample.hpp  sample2d.hpp  stamp.hpp  stamped_data.hpp  tuw_geometry.h  tuw_geometry.hpp  utils.h  utils.hpp  world_scoped_maps.h  world_scoped_maps.hpp
launch/tuw_geometry/: linesegment2d_detector_node.launch
scripts/: test_point2d.py
src/: main_example_figure.cpp
src/tuw_geometry/: __init__.py  command.cpp  command2d.cpp  figure.cpp  geo_map.cpp  layered_figure.cpp  layered_maps.cpp  line2d.cpp  line3d.cpp  linesegment2d.cpp  linesegment2d_detector.cpp  linesegment2d_detector_node.cpp  measurement.cpp  measurement_marker.cpp  measurement_object.cpp  plane3d.cpp  point2d.cpp  point2d_wrapper.cpp  polar2d.cpp  pose2d.cpp  sample2d.cpp  tuw_geometry.cpp  tuw_geometry_wrapper.cpp  utils.cpp  world_scoped_maps.cpp
test/: test_cases.py  test_geometry.cpp
